[gd_scene load_steps=6 format=3 uid="uid://sd56ygtqoi0p"]

[ext_resource type="Script" path="res://Dialogs/skill_reset_confirmation_dialog.gd" id="1_s5d4a"]
[ext_resource type="Script" path="res://Scenes/fadeable_container.gd" id="2_su7sa"]
[ext_resource type="Texture2D" uid="uid://cfby2gx3ertc4" path="res://Textures/UI/confirmation_frame.png" id="3_vgpfm"]
[ext_resource type="Texture2D" uid="uid://c0etl38vn3bw6" path="res://Textures/UI/Buttons/button_cross.png" id="4_svkt1"]
[ext_resource type="Texture2D" uid="uid://cnbxk2ekrux0c" path="res://Textures/UI/Buttons/button_play.png" id="5_nup8q"]

[node name="SkillResetConfirmationDialog" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5d4a")

[node name="FadeableContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_su7sa")

[node name="TextureRect" type="TextureRect" parent="FadeableContainer"]
layout_mode = 2
texture = ExtResource("3_vgpfm")

[node name="MarginContainer" type="MarginContainer" parent="FadeableContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 110
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="FadeableContainer/TextureRect/MarginContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"SkillsHeaderLabel"
text = "Reset Skills?	"

[node name="DescriptionLabel" type="Label" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"SkillsHeaderLabel"
text = "This will reset all your skills.
Are sure?"

[node name="HBoxContainer" type="HBoxContainer" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="CancelTextureButton" type="TextureButton" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("4_svkt1")

[node name="ConfirmTextureButton" type="TextureButton" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("5_nup8q")

[connection signal="on_faded_in" from="FadeableContainer" to="." method="_on_faded_in"]
[connection signal="on_faded_out" from="FadeableContainer" to="." method="_on_faded_out"]
[connection signal="on_fading_in" from="FadeableContainer" to="." method="_on_fading_in"]
[connection signal="on_fading_out" from="FadeableContainer" to="." method="_on_fading_out"]
[connection signal="pressed" from="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/CancelTextureButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/ConfirmTextureButton" to="." method="_on_confirm_button_pressed"]
